<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/profile_imgView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_twotone_account_circle_24" />

        <RelativeLayout
            android:id="@+id/adding_view_rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_below="@id/profile_imgView_logo"
            >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/profile"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        app:hintTextAppearance="@style/TextLabel"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/name_tf_view_profile"
                            android:hint="@string/name"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"

                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/bg_edit_text"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        app:hintTextAppearance="@style/TextLabel"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/cnic_tf_view_profile"
                            android:hint="@string/cnic"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"

                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/bg_edit_text"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        app:hintTextAppearance="@style/TextLabel"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/email_tf_view_profile"
                            android:hint="@string/email"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"

                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/bg_edit_text"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        app:hintTextAppearance="@style/TextLabel"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/dob_tf_view_profile"
                            android:hint="@string/dob"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"

                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/bg_edit_text"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        app:hintTextAppearance="@style/TextLabel"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/contact_number_tf_view_profile"
                            android:hint="@string/cell"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"

                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/bg_edit_text"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        app:hintTextAppearance="@style/TextLabel"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/education_tf_view_profile"
                            android:hint="@string/education"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"

                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/bg_edit_text"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <Button
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bg"
                    android:clickable="true"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:text="@string/cancel"
                    android:layout_marginRight="10dp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/edit_Profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="50dp"
                    android:paddingRight="55dp"
                    android:text="@string/Edit_Profile"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/adding_view_bottom_rally2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:visibility="gone">

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adding_view_rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/my_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:indeterminateDrawable="@drawable/progress_bar_ring" />

        <TextView
            android:id="@+id/catagory_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/my_progress_bar"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center" />


    </RelativeLayout>


</RelativeLayout>